- Fixed bug #54494: mb_substr() mishandles UTF-32LE and UCS-2LE.